--- a/notebooks/1.1 nanogpt (ao).ipynb
+++ b/notebooks/1.1 nanogpt (ao).ipynb
@@ -99,14 +99,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3b1dd716-9d1b-4086-ae9c-3cf032ec04a3",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;129m@torch\u001b[39m\u001b[38;5;241m.\u001b[39mcompile \u001b[38;5;66;03m## ns\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mzeropower_via_newtonschulz5\u001b[39m(G: Tensor, steps: \u001b[38;5;28mint\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Tensor:\n\u001b[1;32m      3\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;124;03m    Newton-Schulz iteration to compute the zeroth power / orthogonalization of G. We opt to use a\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;124;03m    quintic iteration whose coefficients are selected to maximize the slope at zero. For the purpose\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;124;03m    performance at all relative to UV^T, where USV^T = G is the SVD.\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m G\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;66;03m# batched Muon implementation by @scottjmaddox, and put into practice in the record by @YouJiacheng\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "@torch.compile ## ns\n",
     "def zeropower_via_newtonschulz5(G: Tensor, steps: int) -> Tensor:\n",
@@ -142,11 +150,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b3f0f206-d925-4920-8f53-681265a44628",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Muon(torch.optim.Optimizer):\n",
