--- a/notebooks/1.2 nanogpt (w ao).ipynb
+++ b/notebooks/1.2 nanogpt (w ao).ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python ../data/cached_fineweb10B.py 1"
+    "!python ../data/cached_fineweb10B.py"
    ]
   },
   {
@@ -322,12 +322,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "66e2360d-f65a-451b-89c9-9020d252e665",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
@@ -819,13 +814,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "fe1f0904-4288-4559-b8ca-20f6084d5bf4",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
@@ -1202,6 +1191,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "55536d89-4898-4675-80f7-9ea0b0f85cb3",
+   "metadata": {},
+   "source": [
+    "### ao"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f72be145-3cc5-4075-ba35-07c701fafd87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ao_cfg = Float8LinearConfig.from_recipe_name(\"rowwise\")  # can also try tensorwise\n",
+    "def _ao_filter(mod: nn.Module, fqn: str) -> bool:\n",
+    "    # keep your custom FP8 lm_head exactly as-is\n",
+    "    if \"lm_head\" in fqn:\n",
+    "        return False\n",
+    "    # FP8 TC path wants dims divisible by 16\n",
+    "    if hasattr(mod, \"in_features\") and hasattr(mod, \"out_features\"):\n",
+    "        return (mod.in_features % 16 == 0) and (mod.out_features % 16 == 0)\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19b40402-379a-4f87-aaef-e0acc8a4020d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = convert_to_float8_training(model, config=ao_cfg, module_filter_fn=_ao_filter)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "701f5897-7bfd-4130-847f-5d102d14268c",
+   "metadata": {},
+   "source": [
+    "### torch compile"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2672d18a-aad3-4706-822b-804d9ca90ac8",
@@ -1215,14 +1248,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dd2dfaff-c6c7-4db5-819c-257fda55ac4f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f3ddd94-9ced-4947-8c05-f0395af923cd",
    "metadata": {},
    "outputs": [],
    "source": []
