eyes without a face

--- a/notebooks/1.3 (fa3).ipynb
+++ b/notebooks/1.3 (fa3).ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "!python -m pip install --upgrade pip && pip install -r ../requirements.txt\n",
-    "!pip install --pre torch --index-url https://download.pytorch.org/whl/nightly/cu126 --upgrade"
+    "!pip install --pre torch --index-url https://download.pytorch.org/whl/nightly/cu126 --upgrade\n",
+    "!pip install triton"
    ]
   },
   {
@@ -18,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python ../data/cached_fineweb10B.py"
+    "!python ../data/cached_fineweb10B.py 1"
    ]
   },
   {
@@ -322,7 +323,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "66e2360d-f65a-451b-89c9-9020d252e665",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "ename": "NameError",
@@ -426,22 +432,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d7232c4e-f8e3-48d3-b927-aee61174c6b3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "59b7ad61-a3cc-4a5b-8af1-c0c9b1976788",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "id": "b7ec017e-065d-4f43-b092-9163c3aaf940",
    "metadata": {},
@@ -449,6 +439,68 @@
    "source": [
     "def norm(x: Tensor):\n",
     "    return F.rms_norm(x, (x.size(-1),))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3f62b7c-80e0-4b61-a365-39b477ebe1c2",
+   "metadata": {},
+   "source": [
+    "### Flash Attention"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55ab167b-8593-4355-9d88-a57a554c2638",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import triton\n",
+    "import triton.language as tl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e46f64b1-4a0e-48b6-8b28-03c1622841f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install ninja"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7acdfe1f-dd5b-4ce5-980c-6c0f2acee303",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ninja must be installed\n",
+    "ninja --version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2fc4a30-351f-4ce4-a616-bb57de52753e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# installs the FlashAttention-3 “hopper” package without a manual git clone\n",
+    "!pip install --no-build-isolation \\\n",
+    "  'git+https://github.com/Dao-AILab/flash-attention@main#subdirectory=hopper'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d74d4b96-e613-4556-87a6-3f2a03528248",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import flash_attn_interface"
    ]
   },
   {
@@ -569,20 +621,32 @@
     "        # inspired by learnable scalars used by @brendanh0gan https://x.com/hi_tysam/status/1879693583898591283\n",
     "        self.attn_scale = 0.12\n",
     "\n",
-    "    def forward(self, x: Tensor, ve: Tensor | None, lambdas: Tensor, block_mask: BlockMask):\n",
-    "        B, T = x.size(0), x.size(1)  # batch size, sequence length\n",
-    "        assert B == 1, \"Must use batch size = 1 for FlexAttention\"\n",
-    "        q, k, v = F.linear(x, self.qkv_w.flatten(end_dim=1).type_as(x)).view(B, T, 3 * self.num_heads,\n",
-    "                                                                             self.head_dim).chunk(3, dim=-2)\n",
-    "        q, k = norm(q), norm(k)  # QK norm @Grad62304977\n",
-    "        q, k = self.rotary(q), self.rotary(k)\n",
+    "    def forward(self, x: Tensor, ve: Tensor | None, lambdas: Tensor, bm_size: int):\n",
+    "        B, T = x.shape[:2]  # batch size, sequence length\n",
+    "        # never split for speed boost with fused attention\n",
+    "        qkv = F.linear(x, self.qkv_w.flatten(end_dim=1).type_as(x)).view(B, T, 3, self.num_heads, self.head_dim)\n",
+    "\n",
+    "        # take views, each (B, T, H, D)\n",
+    "        q = qkv[:, :, 0]   \n",
+    "        k = qkv[:, :, 1]\n",
+    "        v = qkv[:, :, 2]\n",
+    "\n",
+    "        q.copy_(self.rotary(norm(q)))\n",
+    "        k.copy_(self.rotary(norm(k)))\n",
+    "        \n",
     "        if ve is not None:\n",
-    "            v = lambdas[0] * v + lambdas[1] * ve.view_as(v)  # @KoszarskyB & @Grad62304977\n",
-    "        else:  # skip mid-layers token value embeddings by @YouJiacheng\n",
-    "            v = lambdas[0] * v\n",
-    "        y = flex_attention(q.transpose(1, 2), k.transpose(1, 2), v.transpose(1, 2), block_mask=block_mask,\n",
-    "                           scale=self.attn_scale).transpose(1, 2)\n",
-    "        y = y.contiguous().view(B, T, self.num_heads * self.head_dim)  # re-assemble all head outputs side by side\n",
+    "            v.mul_(lambdas[0]).add_(lambdas[1] * ve.view_as(v))\n",
+    "        else:\n",
+    "            v.mul_(lambdas[0])\n",
+    "    \n",
+    "        y = flash_attn_qkvpacked_func(\n",
+    "            qkv, dropout_p=0.0,\n",
+    "            softmax_scale=self.attn_scale,   # your constant scale is supported\n",
+    "            causal=True,                     # or False\n",
+    "            window_size=(bm_size, 0) \n",
+    "        )  # -> (B, T, H, D)\n",
+    "        \n",
+    "        y = y.reshape(B, T, self.num_heads * self.head_dim)\n",
     "        y = self.c_proj(y)\n",
     "        return y"
    ]
@@ -640,11 +704,10 @@
     "        self.attn = CausalSelfAttention(dim, num_heads, max_seq_len) if layer_idx != 7 else None\n",
     "        self.mlp = MLP(dim)\n",
     "\n",
-    "    def forward(self, x: Tensor, ve: Tensor | None, x0: Tensor, lambdas: Tensor, sa_lambdas: Tensor,\n",
-    "                block_mask: BlockMask):\n",
+    "    def forward(self, x: Tensor, ve: Tensor | None, x0: Tensor, lambdas: Tensor, sa_lambdas: Tensor, bm_size: int):\n",
     "        x = lambdas[0] * x + lambdas[1] * x0\n",
     "        if self.attn is not None:\n",
-    "            x = x + self.attn(norm(x), ve, sa_lambdas, block_mask)\n",
+    "            x = x + self.attn(norm(x), ve, sa_lambdas, bm_size)\n",
     "        x = x + self.mlp(norm(x))\n",
     "        return x"
    ]
@@ -694,48 +757,7 @@
     "            param.lr_mul = 75.\n",
     "        self.lm_head.weight.lr_mul = 27.5\n",
     "        self.scalars.lr_mul = 5.0\n",
-    "\n",
-    "    def create_blockmasks(self, input_seq: Tensor, sliding_window_num_blocks: Tensor):\n",
-    "        BLOCK_SIZE = 128\n",
-    "        docs = (input_seq == 50256).cumsum(0)\n",
-    "\n",
-    "        def document_causal(b, h, q_idx, kv_idx):\n",
-    "            causal_mask = q_idx >= kv_idx\n",
-    "            document_mask = docs[q_idx] == docs[kv_idx]\n",
-    "            return causal_mask & document_mask\n",
-    "\n",
-    "        def dense_to_ordered(dense_blockmask: Tensor):\n",
-    "            num_blocks = dense_blockmask.sum(dim=-1, dtype=torch.int32)\n",
-    "            indices = dense_blockmask.argsort(dim=-1, descending=False, stable=True).flip(-1).to(torch.int32)\n",
-    "            return num_blocks[None, None].contiguous(), indices[None, None].contiguous()\n",
-    "\n",
-    "        # manual block mask creation by @YouJiacheng\n",
-    "        assert len(input_seq) % BLOCK_SIZE == 0\n",
-    "        NUM_BLOCKS = len(input_seq) // BLOCK_SIZE\n",
-    "        block_idx = torch.arange(NUM_BLOCKS, dtype=torch.int32, device=\"cuda\")\n",
-    "        causal_blockmask_any = block_idx[:, None] >= block_idx\n",
-    "        causal_blockmask_all = block_idx[:, None] > block_idx\n",
-    "        docs_low = docs.view(-1, BLOCK_SIZE)[:, 0].contiguous()\n",
-    "        docs_high = docs.view(-1, BLOCK_SIZE)[:, -1].contiguous()\n",
-    "        document_blockmask_any = (docs_low[:, None] <= docs_high) & (docs_high[:, None] >= docs_low)\n",
-    "        document_blockmask_all = (docs_low[:, None] == docs_high) & (docs_high[:, None] == docs_low)\n",
-    "        blockmask_any = causal_blockmask_any & document_blockmask_any\n",
-    "        blockmask_all = causal_blockmask_all & document_blockmask_all\n",
-    "        partial_kv_num_blocks, partial_kv_indices = dense_to_ordered(blockmask_any & ~blockmask_all)\n",
-    "        full_kv_num_blocks, full_kv_indices = dense_to_ordered(blockmask_all)\n",
-    "\n",
-    "        def build_bm(window_size_blocks: Tensor) -> BlockMask:\n",
-    "            return BlockMask.from_kv_blocks(\n",
-    "                torch.clamp_max(partial_kv_num_blocks, torch.clamp_min(window_size_blocks - full_kv_num_blocks, 1)),\n",
-    "                partial_kv_indices,\n",
-    "                torch.clamp_max(full_kv_num_blocks, window_size_blocks - 1),\n",
-    "                full_kv_indices,\n",
-    "                BLOCK_SIZE=BLOCK_SIZE,\n",
-    "                mask_mod=document_causal,\n",
-    "            )\n",
-    "\n",
-    "        # Long-short SWA block masks by @leloykun & @YouJiacheng, adapated from suggestion by @Grad62304977, following Gemma 2 paper\n",
-    "        return build_bm(sliding_window_num_blocks), build_bm(sliding_window_num_blocks // 2)\n",
+    "        \n",
     "\n",
     "    def forward(self, input_seq: Tensor, target_seq: Tensor, sliding_window_num_blocks: Tensor):\n",
     "        assert input_seq.ndim == 1\n",
@@ -745,10 +767,13 @@
     "        ve = [ve[0], ve[1], ve[2]] + [None] * (len(self.blocks) - 6) + [ve[0], ve[1], ve[2]]\n",
     "        assert len(ve) == len(self.blocks)\n",
     "\n",
-    "        long_bm, short_bm = self.create_blockmasks(input_seq, sliding_window_num_blocks)\n",
-    "        block_masks = [long_bm, short_bm, short_bm, short_bm, long_bm, short_bm, short_bm, long_bm, short_bm, short_bm,\n",
-    "                       short_bm, long_bm]\n",
-    "        assert len(block_masks) == len(self.blocks)\n",
+    "        # long_bm, short_bm = self.create_blockmasks(input_seq, sliding_window_num_blocks)\n",
+    "        long_bm, short_bm = sliding_window_num_blocks, sliding_window_num_blocks // 2\n",
+    "        bm_sizes = [long_bm, short_bm, short_bm, \n",
+    "                       short_bm, long_bm, short_bm, \n",
+    "                       short_bm, long_bm, short_bm, \n",
+    "                       short_bm, short_bm, long_bm]\n",
+    "        assert len(bm_sizes) == len(self.blocks)\n",
     "\n",
     "        x = x0 = norm(self.embed(input_seq)[None])  # use of norm here by @Grad62304977\n",
     "\n",
@@ -763,7 +788,7 @@
     "        for i in range(len(self.blocks)):\n",
     "            if i >= n:\n",
     "                x = x + skip_weights[i - n] * skip_connections.pop()\n",
-    "            x = self.blocks[i](x, ve[i], x0, lambdas[i], sa_lambdas[i], block_masks[i])\n",
+    "            x = self.blocks[i](x, ve[i], x0, lambdas[i], sa_lambdas[i], bm_sizes[i])\n",
     "            if i < n:\n",
     "                skip_connections.append(x)\n",
     "\n",
@@ -830,7 +855,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "fe1f0904-4288-4559-b8ca-20f6084d5bf4",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "NameError",
@@ -1207,61 +1238,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "55536d89-4898-4675-80f7-9ea0b0f85cb3",
-   "metadata": {},
-   "source": [
-    "### ao"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7691c567-89a1-4f93-ae9e-25170f1f1bd8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torchao.float8 import convert_to_float8_training, Float8LinearConfig\n",
-    "from torchao.float8 import ScalingGranularity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f72be145-3cc5-4075-ba35-07c701fafd87",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ao_cfg = Float8LinearConfig.from_recipe_name(\"rowwise\")  # can also try tensorwise\n",
-    "def _ao_filter(mod: nn.Module, fqn: str) -> bool:\n",
-    "    # keep your custom FP8 lm_head exactly as-is\n",
-    "    if \"lm_head\" in fqn:\n",
-    "        return False\n",
-    "    # FP8 TC path wants dims divisible by 16\n",
-    "    if hasattr(mod, \"in_features\") and hasattr(mod, \"out_features\"):\n",
-    "        return (mod.in_features % 16 == 0) and (mod.out_features % 16 == 0)\n",
-    "    return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19b40402-379a-4f87-aaef-e0acc8a4020d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = convert_to_float8_training(model, config=ao_cfg, module_filter_fn=_ao_filter)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "701f5897-7bfd-4130-847f-5d102d14268c",
-   "metadata": {},
-   "source": [
-    "### torch compile"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2672d18a-aad3-4706-822b-804d9ca90ac8",
@@ -1275,6 +1251,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dd2dfaff-c6c7-4db5-819c-257fda55ac4f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f3ddd94-9ced-4947-8c05-f0395af923cd",
    "metadata": {},
    "outputs": [],
    "source": []
