--- a/notebooks/1.1 nanogpt (ao).ipynb
+++ b/notebooks/1.1 nanogpt (ao).ipynb
@@ -86,7 +86,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"PYTORCH_CUDA_ALLOC_CONF\"] = \"expandable_segments:True\""
+    "os.environ[\"PYTORCH_CUDA_ALLOC_CONF\"] = \"expandable_segments:True\"\n",
+    "os.environ[\"PYTORCH_ALLOC_CONF\"] = \"expandable_segments:True\""
    ]
   },
   {
@@ -684,11 +685,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "fe1f0904-4288-4559-b8ca-20f6084d5bf4",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# find world_size starting indicies, such that each begins with token 50256 and local_batches don't overlap\n",
