--- a/notebooks/1.3 (fa3).ipynb
+++ b/notebooks/1.3 (fa3).ipynb
@@ -93,6 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.environ[\"PYTORCH_ALLOC_CONF\"] = \"expandable_segments:True\"\n",
     "os.environ[\"PYTORCH_CUDA_ALLOC_CONF\"] = \"expandable_segments:True\""
    ]
   },
@@ -149,11 +150,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b3f0f206-d925-4920-8f53-681265a44628",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Muon(torch.optim.Optimizer):\n",
@@ -230,11 +227,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "fcbc0f81-97ec-4ed7-99df-78f34bada062",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class DistAdam(torch.optim.Optimizer):\n",
@@ -641,9 +634,10 @@
     "    \n",
     "        y = flash_attn_qkvpacked_func(\n",
     "            qkv, dropout_p=0.0,\n",
-    "            softmax_scale=self.attn_scale,   # your constant scale is supported\n",
+    "            softmax_scale=self.attn_scale,  \n",
     "            causal=True,                     # or False\n",
-    "            window_size=(bm_size, 0) \n",
+    "            window_size=(bm_size, 0),\n",
+    "            deterministic=False\n",
     "        )  # -> (B, T, H, D)\n",
     "        \n",
     "        y = y.reshape(B, T, self.num_heads * self.head_dim)\n",
@@ -767,7 +761,6 @@
     "        ve = [ve[0], ve[1], ve[2]] + [None] * (len(self.blocks) - 6) + [ve[0], ve[1], ve[2]]\n",
     "        assert len(ve) == len(self.blocks)\n",
     "\n",
-    "        # long_bm, short_bm = self.create_blockmasks(input_seq, sliding_window_num_blocks)\n",
     "        long_bm, short_bm = sliding_window_num_blocks, sliding_window_num_blocks // 2\n",
     "        bm_sizes = [long_bm, short_bm, short_bm, \n",
     "                       short_bm, long_bm, short_bm, \n",
@@ -990,8 +983,8 @@
     "@dataclass\n",
     "class Hyperparameters:\n",
     "    # data\n",
-    "    train_files = \"data/fineweb10B/fineweb_train_*.bin\"  # input .bin to train on\n",
-    "    val_files = \"data/fineweb10B/fineweb_val_*.bin\"  # input .bin to eval validation loss on\n",
+    "    train_files = \"../data/fineweb10B/fineweb_train_*.bin\"  # input .bin to train on\n",
+    "    val_files = \"../data/fineweb10B/fineweb_val_*.bin\"  # input .bin to eval validation loss on\n",
     "    val_tokens = 10485760  # how many tokens of validation data? it's important to keep this fixed for consistent comparisons\n",
     "    train_seq_len = 48 * 1024  # FlexAttention sequence length\n",
     "    val_seq_len = 4 * 64 * 1024  # FlexAttention sequence length for validation\n",
@@ -1058,8 +1051,11 @@
     "assert torch.cuda.is_available()\n",
     "device = torch.device(\"cuda\", int(os.environ[\"LOCAL_RANK\"]))\n",
     "torch.cuda.set_device(device)\n",
-    "dist.init_process_group(backend=\"nccl\", device_id=device)\n",
-    "dist.barrier()"
+    "run = False  \n",
+    "if not run:\n",
+    "    dist.init_process_group(backend=\"nccl\", device_id=device)\n",
+    "    dist.barrier()\n",
+    "    run = True"
    ]
   },
   {
@@ -1327,10 +1323,20 @@
    "outputs": [],
    "source": [
     "# Warmup the training kernels, then re-initialize the state so we aren't cheating\n",
-    "warmup_steps = 10\n",
+    "warmup_steps = 150\n",
     "initial_state = dict(model=copy.deepcopy(model.state_dict()),\n",
     "                     optimizers=[copy.deepcopy(opt.state_dict()) for opt in optimizers])  # save the initial state\n",
     "train_loader = distributed_data_generator(args.train_files, world_size * args.train_seq_len, align_to_bos=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1ffe97c-e49c-46f1-a9b1-49a81efc762d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm.auto import tqdm"
    ]
   },
   {
@@ -1340,7 +1346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for _ in range(warmup_steps):\n",
+    "for _ in tqdm(range(warmup_steps)):\n",
     "    inputs, targets = next(train_loader)\n",
     "    model(inputs, targets, get_window_size_blocks(1)).backward()\n",
     "    for opt in optimizers:\n",
@@ -1368,12 +1374,9 @@
    "outputs": [],
    "source": [
     "train_loader = distributed_data_generator(args.train_files, world_size * args.train_seq_len, align_to_bos=True)\n",
+    "train_steps = args.num_iterations\n",
     "training_time_ms = 0\n",
-    "# start the clock\n",
-    "torch.cuda.synchronize()\n",
-    "t0 = time.perf_counter()\n",
-    "# begin training\n",
-    "train_steps = args.num_iterations"
+    "tokens_processed = 0"
    ]
   },
   {
@@ -1383,6 +1386,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# start the clock\n",
+    "torch.cuda.synchronize()\n",
+    "t0 = time.perf_counter()\n",
+    "# begin training\n",
     "for step in range(train_steps + 1):\n",
     "    last_step = (step == train_steps)\n",
     "\n",
@@ -1429,21 +1436,21 @@
     "    if step == 0:\n",
     "        print(\"First inputs retrieved\")\n",
     "    tokens_processed += len(inputs) # maybe times world size?\n",
-    "    if False:\n",
-    "        model(inputs, targets, get_window_size_blocks(step)).backward()\n",
-    "        # set optimization hyperparameters\n",
-    "        for opt in optimizers:\n",
-    "            for group in opt.param_groups:\n",
-    "                group[\"lr\"] = group[\"initial_lr\"] * get_lr(step)\n",
-    "    \n",
-    "        for group in optimizer2.param_groups:\n",
-    "            frac = min(step / 300, 1)  # momentum warmup for muon\n",
-    "            group[\"momentum\"] = (1 - frac) * 0.85 + frac * 0.95\n",
-    "        # step the optimizers\n",
-    "        for opt in optimizers:\n",
-    "            opt.step()\n",
-    "        # null the gradients\n",
-    "        model.zero_grad(set_to_none=True)\n",
+    "\n",
+    "    model(inputs, targets, get_window_size_blocks(step)).backward()\n",
+    "    # set optimization hyperparameters\n",
+    "    for opt in optimizers:\n",
+    "        for group in opt.param_groups:\n",
+    "            group[\"lr\"] = group[\"initial_lr\"] * get_lr(step)\n",
+    "\n",
+    "    for group in optimizer2.param_groups:\n",
+    "        frac = min(step / 300, 1)  # momentum warmup for muon\n",
+    "        group[\"momentum\"] = (1 - frac) * 0.85 + frac * 0.95\n",
+    "    # step the optimizers\n",
+    "    for opt in optimizers:\n",
+    "        opt.step()\n",
+    "    # null the gradients\n",
+    "    model.zero_grad(set_to_none=True)\n",
     "    # logging\n",
     "    approx_training_time_ms = training_time_ms + 1000 * (time.perf_counter() - t0)\n",
     "    print0(\n",
