--- a/notebooks/1 nanogpt.ipynb
+++ b/notebooks/1 nanogpt.ipynb
@@ -954,8 +954,8 @@
     "@dataclass\n",
     "class Hyperparameters:\n",
     "    # data\n",
-    "    train_files = \"data/fineweb10B/fineweb_train_*.bin\"  # input .bin to train on\n",
-    "    val_files = \"data/fineweb10B/fineweb_val_*.bin\"  # input .bin to eval validation loss on\n",
+    "    train_files = \"../data/fineweb10B/fineweb_train_*.bin\"  # input .bin to train on\n",
+    "    val_files = \"../data/fineweb10B/fineweb_val_*.bin\"  # input .bin to eval validation loss on\n",
     "    val_tokens = 10485760  # how many tokens of validation data? it's important to keep this fixed for consistent comparisons\n",
     "    train_seq_len = 48 * 1024  # FlexAttention sequence length\n",
     "    val_seq_len = 4 * 64 * 1024  # FlexAttention sequence length for validation\n",
@@ -963,7 +963,7 @@
     "    num_iterations = 1750  # number of iterations to run\n",
     "    cooldown_frac = 0.45  # fraction of training spent cooling down the learning rate\n",
     "    # evaluation and logging\n",
-    "    val_loss_every = 125  # every how many steps to evaluate val loss? 0 for only at the end\n",
+    "    val_loss_every = 350  # every how many steps to evaluate val loss? 0 for only at the end\n",
     "    save_checkpoint = False\n",
     "\n",
     "    vocab_size = next_multiple_of_n(50257, n=128)\n",
@@ -1022,8 +1022,11 @@
     "assert torch.cuda.is_available()\n",
     "device = torch.device(\"cuda\", int(os.environ[\"LOCAL_RANK\"]))\n",
     "torch.cuda.set_device(device)\n",
-    "dist.init_process_group(backend=\"nccl\", device_id=device)\n",
-    "dist.barrier()"
+    "run = False  \n",
+    "if not run:\n",
+    "    dist.init_process_group(backend=\"nccl\", device_id=device)\n",
+    "    dist.barrier()\n",
+    "    run = True"
    ]
   },
   {
@@ -1291,10 +1294,20 @@
    "outputs": [],
    "source": [
     "# Warmup the training kernels, then re-initialize the state so we aren't cheating\n",
-    "warmup_steps = 10\n",
+    "warmup_steps = 150\n",
     "initial_state = dict(model=copy.deepcopy(model.state_dict()),\n",
     "                     optimizers=[copy.deepcopy(opt.state_dict()) for opt in optimizers])  # save the initial state\n",
     "train_loader = distributed_data_generator(args.train_files, world_size * args.train_seq_len, align_to_bos=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "820a3542-b88a-4904-a274-96c2386208d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm.auto import tqdm"
    ]
   },
   {
@@ -1304,7 +1317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for _ in range(warmup_steps):\n",
+    "for _ in tqdm(range(warmup_steps)):\n",
     "    inputs, targets = next(train_loader)\n",
     "    model(inputs, targets, get_window_size_blocks(1)).backward()\n",
     "    for opt in optimizers:\n",
@@ -1332,12 +1345,9 @@
    "outputs": [],
    "source": [
     "train_loader = distributed_data_generator(args.train_files, world_size * args.train_seq_len, align_to_bos=True)\n",
+    "train_steps = args.num_iterations\n",
     "training_time_ms = 0\n",
-    "# start the clock\n",
-    "torch.cuda.synchronize()\n",
-    "t0 = time.perf_counter()\n",
-    "# begin training\n",
-    "train_steps = args.num_iterations"
+    "tokens_processed = 0"
    ]
   },
   {
@@ -1347,6 +1357,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# start the clock\n",
+    "torch.cuda.synchronize()\n",
+    "t0 = time.perf_counter()\n",
+    "# begin training\n",
     "for step in range(train_steps + 1):\n",
     "    last_step = (step == train_steps)\n",
     "\n",
@@ -1393,21 +1407,21 @@
     "    if step == 0:\n",
     "        print(\"First inputs retrieved\")\n",
     "    tokens_processed += len(inputs) # maybe times world size?\n",
-    "    if False:\n",
-    "        model(inputs, targets, get_window_size_blocks(step)).backward()\n",
-    "        # set optimization hyperparameters\n",
-    "        for opt in optimizers:\n",
-    "            for group in opt.param_groups:\n",
-    "                group[\"lr\"] = group[\"initial_lr\"] * get_lr(step)\n",
-    "    \n",
-    "        for group in optimizer2.param_groups:\n",
-    "            frac = min(step / 300, 1)  # momentum warmup for muon\n",
-    "            group[\"momentum\"] = (1 - frac) * 0.85 + frac * 0.95\n",
-    "        # step the optimizers\n",
-    "        for opt in optimizers:\n",
-    "            opt.step()\n",
-    "        # null the gradients\n",
-    "        model.zero_grad(set_to_none=True)\n",
+    "\n",
+    "    model(inputs, targets, get_window_size_blocks(step)).backward()\n",
+    "    # set optimization hyperparameters\n",
+    "    for opt in optimizers:\n",
+    "        for group in opt.param_groups:\n",
+    "            group[\"lr\"] = group[\"initial_lr\"] * get_lr(step)\n",
+    "\n",
+    "    for group in optimizer2.param_groups:\n",
+    "        frac = min(step / 300, 1)  # momentum warmup for muon\n",
+    "        group[\"momentum\"] = (1 - frac) * 0.85 + frac * 0.95\n",
+    "    # step the optimizers\n",
+    "    for opt in optimizers:\n",
+    "        opt.step()\n",
+    "    # null the gradients\n",
+    "    model.zero_grad(set_to_none=True)\n",
     "    # logging\n",
     "    approx_training_time_ms = training_time_ms + 1000 * (time.perf_counter() - t0)\n",
     "    print0(\n",
