--- a/notebooks/1 nanogpt.ipynb
+++ b/notebooks/1 nanogpt.ipynb
@@ -92,6 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.environ[\"PYTORCH_ALLOC_CONF\"] = \"expandable_segments:True\"\n",
     "os.environ[\"PYTORCH_CUDA_ALLOC_CONF\"] = \"expandable_segments:True\""
    ]
   },
